--- a/css/menu-pie.css
+++ b/css/menu-pie.css
@@ -230,3 +230,13 @@ main {
       font-size: 14px; /* Aumenta el tamaño de la fuente en pantallas pequeñas */
   }
 }
+
+.last-updated {
+  text-align: center;
+  font-size: 1rem;
+  color: #fff; /* Cambia según tu diseño */
+  background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 5px;
+}
