--- a/css/menu-pie.css
+++ b/css/menu-pie.css
@@ -190,10 +190,9 @@ main {
 
 /* Estilos para el pie de página */
 .custom-footer {
-  
   background-color: #2c3e50; /* Fondo oscuro */
   color: #fff; /* Texto en color blanco */
-  padding: 0 0; /* Espaciado superior e inferior */
+  padding: 20px 0; /* Espaciado superior e inferior */
   font-size: 14px; /* Tamaño de fuente */
   text-align: center; /* Centrado de texto */
   flex-shrink: 0;
@@ -220,10 +219,8 @@ main {
 .custom-footer hr {
   border: 0;
   border-top: 1px solid #fff; /* Línea blanca */
-  margin: 0 0;
-  width: 50%; /* Ancho de la línea */
-  margin-left: auto;
-  margin-right: auto;
+  margin: 10px auto; /* Espaciado alrededor de la línea */
+  width: 70%; /* Ancho de la línea */
 }
 
 /* Texto del copyright */
@@ -241,19 +238,45 @@ main {
 /* Asegura que los elementos en el footer sean responsivos */
 @media (max-width: 768px) {
   .custom-footer {
-      padding: 15px 0; /* Menor espaciado en pantallas pequeñas */
+    padding: 10px 20px; /* Ajusta el espaciado en pantallas más pequeñas */
+    font-size: 12px; /* Reduce el tamaño de fuente */
   }
 
   .custom-footer i {
-      font-size: 20px; /* Aumenta el tamaño del icono en pantallas pequeñas */
+    font-size: 22px; /* Aumenta ligeramente el tamaño del icono */
+    margin-bottom: 10px; /* Espaciado adicional en íconos */
   }
 
-  .custom-footer .row {
-      text-align: center; /* Centra el contenido en pantallas pequeñas */
+  .custom-footer hr {
+    width: 90%; /* Línea más ancha en pantallas pequeñas */
+  }
+
+  .custom-footer p {
+    margin: 10px 0; /* Mayor espaciado entre párrafos */
+    font-size: 13px; /* Ajusta el tamaño del texto */
   }
 
   #fecha_pie {
-      font-size: 14px; /* Aumenta el tamaño de la fuente en pantallas pequeñas */
+    font-size: 13px; /* Tamaño ligeramente mayor en pantallas pequeñas */
+    margin-top: 15px;
   }
 }
 
+@media (max-width: 576px) {
+  .custom-footer {
+    padding: 15px 10px; /* Menor padding para pantallas muy pequeñas */
+    font-size: 12px; /* Reduce un poco más el tamaño de la fuente */
+  }
+
+  .custom-footer hr {
+    width: 80%; /* Ajusta el ancho del separador */
+  }
+
+  .custom-footer i {
+    font-size: 20px; /* Ajusta el tamaño del icono */
+  }
+
+  #fecha_pie {
+    font-size: 12px; /* Texto más pequeño para pantallas pequeñas */
+  }
+}
