--- a/style.css
+++ b/style.css
@@ -41,13 +41,16 @@ main {
 
 .slider__section{
   width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 100%; /* Se adapta al contenedor */
 }
 .slider__img{
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
+  transition: transform 0.5s ease;
 }
 
 .slider__btn {
