--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main {
   display: block;
   width: 100%;
   height: 100%;
+  object-fit: cover; /* Asegura que la imagen cubra el contenedor sin deformarse *
   transition: transform 0.5s ease;
 }
 
