--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ main {
   position: relative;
 }
 
+
+
 .container-slider{
   width: 95%;
   max-width: 90%;
@@ -24,7 +26,14 @@ main {
   background: #ffffff;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
+/* Ajuste para imágenes dentro del slider */
+.slider__img {
+  display: block;
+  width: 100%;
+  height: 100%; /* Mantén las proporciones de la imagen */
+  object-fit: cover; /* Asegura que la imagen cubra el contenedor sin deformarse */
+  transition: transform 0.5s ease;
+}
 .container-slider:hover {
   transform: scale(1.02); /* Pequeño efecto de zoom al pasar el mouse */
   box-shadow: 
@@ -49,7 +58,6 @@ main {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Asegura que la imagen cubra el contenedor sin deformarse *
   transition: transform 0.5s ease;
 }
 
@@ -134,7 +142,6 @@ main {
 
 @media (max-width: 480px) {
   .container-slider {
-    width: 95%; /* Mayor espacio para pantallas pequeñas */
     margin: 4%;
     border-radius: 8px; /* Menor radio para pantallas pequeñas */
   }
@@ -152,7 +159,6 @@ main {
   padding-bottom: 5px;
   position: relative; /* Para permitir la superposición de contenido */
 }
-
 /* Ajustes de título */
 .mbr-section-title {
   font-weight: normal;
@@ -195,10 +201,9 @@ main {
 
 /* Estilos generales para las tarjetas */
 .card-container {
-  display: block;
-  text-decoration: none;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  position: relative; /* Asegura que el enlace tenga un z-index adecuado */
+  padding: 10px 10px;
+  text-align: center;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .card {
@@ -223,7 +228,7 @@ main {
 }
 
 .card-img img {
-  width: 60%;
+  width: 20%;
   max-width: 100%;
   object-fit: contain;
 }
@@ -263,11 +268,18 @@ main {
 
 @media (max-width: 768px) {
   .mbr-cards-col {
+
       max-width: 100%;
   }
 
   .card-img img {
-      width: 80%;
+      width: 20%;
+  }
+  
+}
+@media (max-width: 480px) {
+  .card-img img {
+    width: 15%; /* Aumenta ligeramente el tamaño en pantallas muy pequeñas */
   }
 }
 
@@ -363,17 +375,17 @@ main {
   }
 }
 
-  /* Estilos para la imagen */
-  .col-md-3 img {
-    max-width: 90%; /* Ajusta el tamaño de la imagen en pantallas pequeñas */
-  }
-}
-
   /* Ajusta las imágenes y el contenido de la sección */
   .col-md-3, .col-md-4 {
     width: 100%; /* Cambia el ancho a 100% en pantallas pequeñas */
     margin-bottom: 20px;
   }
+
+  /* Ajuste de la línea separadora */
+  .separator-line {
+    margin: 20px 0; /* Ajusta el margen de la línea separadora en pantallas pequeñas */
+  }
+
 
 /* General styling for the footer section */
 .mbr-footer {
@@ -806,4 +818,5 @@ textarea {
       font-size: 14px; /* Aumenta el tamaño de la fuente en pantallas pequeñas */
   }
 }
+
 
