--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ main {
 .container-slider{
   width: 95%;
   max-width: 90%;
-  margin: 0% 0% 5% 5%;/* Centra el contenedor horizontalmente */
+  margin: 0% 0% 5% 5%;
   overflow: hidden;
   position: relative;
   box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5),
@@ -54,12 +54,7 @@ main {
   position: relative;
   height: 100%; /* Se adapta al contenedor */
 }
-.slider__img{
-  display: block;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.5s ease;
-}
+
 
 .slider__btn {
   position: absolute;
@@ -122,42 +117,94 @@ main {
 }
 
 /* Ajustes para pantallas más pequeñas */
-@media (max-width: 768px) {
-  .container-slider {
-    width: 95%; /* Mayor espacio para pantallas pequeñas */
-    margin: 5%;
-    box-shadow: 
-      0 2px 6px rgba(0, 0, 0, 0.1),
-      0 10px 20px rgba(0, 0, 0, 0.1);
+@media (max-width: 991px) {
+  
+  .container-slider{
+    width: 95%;
+    max-width: 90%;
+    margin: 0% 0% 5% 5%;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5),
+                0 15px 50px;
+    border-radius: 5px;
+    background: #ffffff;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
-}
 
+  .slider__img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+  }
+@media (max-width: 768px) {
+  
+  .container-slider{
+    width: 95%;
+    max-width: 90%;
+    margin: 0% 0% 5% 5%;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5),
+                0 15px 50px;
+    border-radius: 5px;
+    background: #ffffff;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .slider__img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+}
+  }
+  
 .slider__btn {
   width: 40px;
   height: 40px;
   font-size: 1.2rem;
-  line-height: 40px;
+  line-height: 35px;
 }
 
 
 @media (max-width: 480px) {
   .container-slider {
-    width: 95%; /* Mayor espacio para pantallas pequeñas */
-    margin: 4%;
-    box-shadow: 
-      0 2px 6px rgba(0, 0, 0, 0.1),
-      0 10px 20px rgba(0, 0, 0, 0.1);
+    width: 95%;
+    max-width: 90%;
+    margin: 0% 0% 5% 5%;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.5),
+                0 15px 50px;
+    border-radius: 5px;
+    background: #ffffff;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
+  
+  
+
+  .slider__img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.5s ease;
+
   }
+  
+
   .slider__btn {
     width: 30px;
     height: 30px;
     font-size: 1rem;
-    line-height: 35px;
+    line-height: 25px;
   }
 }
-
-
 /* Sección general con fondo transparente */
 .mbr-section {
   background-color: transparent; /* Fondo transparente */
@@ -824,5 +871,6 @@ textarea {
       font-size: 14px; /* Aumenta el tamaño de la fuente en pantallas pequeñas */
   }
 }
+
 
 
