--- a/css/menu-pie.css
+++ b/css/menu-pie.css
@@ -37,7 +37,7 @@ header {
   z-index: 1000; /* Asegura que el header esté por encima de otros elementos */
   transition: all 0.3s ease-in-out; /* Añade una transición suave para interacciones */
   text-transform: uppercase;
-  max-height: 10% ;
+  max-height: 70px ;
   
 }
 
