--- a/css/menu-pie.css
+++ b/css/menu-pie.css
@@ -38,7 +38,6 @@ header {
   transition: all 0.3s ease-in-out; /* Añade una transición suave para interacciones */
   text-transform: uppercase;
   max-height: 70px ;
-  
 }
 
 
@@ -52,12 +51,13 @@ header .logo {
 
 /* Ajustes específicos para el logo */
 header .logo img {
+  width: auto;
   max-width: 100%; /* Asegura que el logo no supere su contenedor */
-  max-height: 80px; /* Limita el tamaño máximo del logo */
+  max-height: 100%; /* Limita el tamaño máximo del logo */
   height: auto; /* Mantiene proporciones */
   object-fit: contain; /* Ajusta el logo dentro de su contenedor */
   display: block; /* Elimina los espacios en línea alrededor de la imagen */
-  max-height: 100px; /* Limita la altura máxima de la imagen para que se vea proporcional */
+  max-height: 90%; /* Limita la altura máxima de la imagen para que se vea proporcional */
 }
 
 
@@ -193,8 +193,10 @@ header label {
 @media (max-width: 480px) {
   img {
     width: 100%; /* Hace que la imagen ocupe todo el ancho disponible */
-    max-height: 80px; /* Reduce la altura de la imagen en pantallas pequeñas */
+    max-height: 90%; /* Reduce la altura de la imagen en pantallas pequeñas */
   }
+
+  
 }
 
 main {
