--- a/css/menu-pie.css
+++ b/css/menu-pie.css
@@ -173,9 +173,14 @@ header label {
 
 @media (max-width: 576px) {
   header .logo {
-    font-size: 1.25rem; /* Reduce el tamaño del logo */
-  }
-
+  display: flex; /* Centra el logo */
+  align-items: center;
+  justify-content: center;
+  max-width: 120px; /* Limita el ancho máximo del logo */
+  max-height: 120px; /* Asegura que el contenedor del logo no se expanda */
+  padding: 0 0px; /* Espaciado interno alrededor del logo */
+}
+  
   header .navbar ul li a {
     font-size: 0.875rem; /* Reduce aún más el tamaño del texto */
     padding: 8px 10px;
@@ -196,7 +201,15 @@ header label {
     width: 100%; /* Hace que la imagen ocupe todo el ancho disponible */
     max-height: 90%; /* Reduce la altura de la imagen en pantallas pequeñas */
   }
-
+  
+  header .logo {
+  display: flex; /* Centra el logo */
+  align-items: center;
+  justify-content: center;
+  max-width: 120px; /* Limita el ancho máximo del logo */
+  max-height: 120px; /* Asegura que el contenedor del logo no se expanda */
+  padding: 0 0px; /* Espaciado interno alrededor del logo */
+}
   
 }
 
